--- a/intel/index.html
+++ b/intel/index.html
@@ -60,6 +60,7 @@
         </section>
         <section class="announces">
             <div class="container">
+                <h5 class="section__hidden">Спрятанный заголовок</h5>
                 <div class="three-col__container">
                     <article class="announce">
                         <picture class="announce__img">
@@ -230,6 +231,7 @@
                 <div class="deco__small deco_light"></div>
             </div>
             <div class="container">
+                <h5 class="section__hidden">Спрятанный заголовок</h5>
                 <div class="products__wrap">
                     <article class="product">
                         <picture class="product__img">
@@ -304,8 +306,10 @@
         </section>
         <section class="about">
             <div class="container">
+                <h5 class="section__hidden">Спрятанный заголовок</h5>
                 <div class="about__wrap">
                     <article class="about__item">
+                        <h5 class="section__hidden">Спрятанный заголовок</h5>
                         <div class="deco">
                             <div class="deco__big deco_grey"></div>
                             <div class="deco__small deco_light"></div>
