--- a/intel/index.html
+++ b/intel/index.html
@@ -51,17 +51,17 @@
                 <div class="banner__body">
                     <h1 class="section__title text_white">Представляем новый уровень удобства работы на ноутбуке</h1>
                     <p class="banner__text">Платформа Intel® Evo™ обеспечивает высокую производительность и превосходную реалистичность графики для исключительных возможностей ноутбука в любых условиях.</p>
-                    <a id="announces"  href="#" class="button button_light" target="_blank">Читать анонс</a>
+                    <a href="#" class="button button_light" target="_blank">Читать анонс</a>
                 </div>
             </div>
         </section>
         <section class="announces">
             <div class="container">
                 <h5 class="section__hidden">Спрятанный заголовок</h5>
-                <div class="three-col__container">
+                <div id="announces" class="three-col__container">
                     <article class="announce">
                         <picture class="announce__img">
-                            <source srcset="./img/announce_1.webp" type="image/webp">
+                            <source srcset="./img/announce_1.jpg" type="image/jpg">
                             <img loading="lazy" src="./img/announce_1.jpg" alt="Анонс">
                         </picture>
                         <div class="announce__body">
@@ -79,7 +79,7 @@
                     </article>
                     <article class="announce">
                         <picture class="announce__img">
-                            <source srcset="./img/announce_3.webp" type="image/webp">
+                            <source srcset="./img/announce_3.jpg" type="image/jpg">
                             <img loading="lazy" src="./img/announce_3.jpg" alt="Анонс">
                         </picture>
                         <div class="announce__body">
@@ -157,7 +157,7 @@
                 </div>
                 <div class="horizons__body">
                     <h2 class="section__title text_white">Откройте новые горизонты в играх</h2>
-                    <p id="articles" class="horizons__text">Читайте актуальные новости и советы от игровых <br>профессионалов и экспертов Intel, чтобы повысить уровень своей игры.</p>
+                    <p class="horizons__text">Читайте актуальные новости и советы от игровых <br>профессионалов и экспертов Intel, чтобы повысить уровень своей игры.</p>
                 </div>
             </div>
         </section>
@@ -167,7 +167,7 @@
                     <div class="deco__big deco_light"></div>
                     <div class="deco__small deco_white"></div>
                 </div>
-                <div class="three-col__container">
+                <div id="articles" class="three-col__container">
                     <a href="#" class="article" target="_blank">
                         <picture class="article__img">
                             <source srcset="./img/article_1.webp" type="image/webp">
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="section__center">
                     <h2 class="section__title">
-                        <a id="products" href="#" class="small__link text_white" target="_blank">
+                        <a href="#" class="small__link text_white" target="_blank">
                             Все процессоры Intel® Core™
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 38" fill="none">
                                 <path d="M1.5 1.5L20 20C20 20 11 28 1.5 37" stroke-width="6"/>
@@ -222,7 +222,7 @@
                 </div>
             </div>
         </section>
-        <section class="products">
+        <section id="products" class="products">
             <div class="container">
                 <div class="deco">
                     <div class="deco__big deco_grey"></div>
@@ -297,11 +297,11 @@
             </picture>
             <div class="container">
                 <div class="section__center">
-                    <h2 id="about" class="section__title text_white">Intel определяет будущее технологий</h2>
+                    <h2 class="section__title text_white">Intel определяет будущее технологий</h2>
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <div class="container">
                 <h5 class="section__hidden">Спрятанный заголовок</h5>
                 <div class="about__wrap">
