--- a/ny/index.html
+++ b/ny/index.html
@@ -190,6 +190,7 @@
 
     <div class="popup js-popup-recall">
         <div class="popup__body">
+            <button class="popup__close js-popup-close"><span></span></button>
             <h2 class="section__title text_black">Заказать обратный звонок</h2>
             <span class="text_light">Пожалуйста, заполните форму ниже, мы перезвоним Вам в течение 15 минут</span>
             <form class="form">
@@ -212,6 +213,7 @@
 
     <div class="popup js-popup-order">
         <div class="popup__body popup__body_big">
+            <button class="popup__close js-popup-close"><span></span></button>
             <h2 class="section__title text_black">Заказать банкет</h2>
             <span class="text_light">Пожалуйста, заполните форму ниже, мы перезвоним Вам с подтверждением заказа в течение 15 минут</span>
             <form class="form">
@@ -256,6 +258,7 @@
 
     <div class="popup js-popup-degustation">
         <div class="popup__body">
+            <button class="popup__close js-popup-close"><span></span></button>
             <h2 class="section__title text_black">Записаться на бесплатную дегустацию меню</h2>
             <span class="text_light">Пожалуйста, заполните форму ниже, мы перезвоним Вам в течение 15 минут</span>
             <form class="form">
@@ -278,6 +281,7 @@
 
     <div class="popup js-popup-download">
         <div class="popup__body">
+            <button class="popup__close js-popup-close"><span></span></button>
             <h2 class="section__title text_black">Скачать меню в PDF</h2>
             <span class="text_light">Пожалуйста, заполните форму ниже, мы отправим меню в PDF вам на почту</span>
             <form class="form">
@@ -299,8 +303,21 @@
         </div>
     </div>
 
+    <div class="popup js-popup-policy">
+        <div class="popup__body">
+            <button class="popup__close js-popup-close"><span></span></button>
+            <h2 class="section__title text_black">Политика конфиденциальности</h2>
+            <p class="text_light">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum reiciendis temporibus nobis esse! Accusamus sit temporibus beatae molestias dolor totam modi eum ullam aut sapiente molestiae, rerum eaque incidunt, neque, nisi quis soluta enim. Facere beatae eius fugiat animi ratione eum odit aliquam eaque voluptatibus unde vero, sapiente cumque. Ipsa, vel dolorem placeat eius quis, eos totam unde veniam quasi dolorum saepe nihil iusto amet ratione laborum neque. Adipisci molestias provident ea explicabo quae consectetur deleniti saepe officiis. Illo temporibus, perspiciatis accusamus nihil dolor pariatur sit cupiditate in magni, aliquam quo similique voluptates itaque voluptas ea? Quos praesentium eligendi vitae!</p>
+            <button class="header__recall popup__close-btn text_light js-popup-close">вернуться на сайт</button>
+            <div class="popup__img">
+                <img src="./img/logo-b.png" alt="Логотип">
+            </div>
+        </div>
+    </div>
+
     <div class="popup js-popup-thx">
         <div class="popup__body">
+            <button class="popup__close js-popup-close"><span></span></button>
             <h2 class="section__title text_black text_tac text_large">Благодарим за доверие!</h2>
             <span class="text_light text_tac">До встречи в ресторанах Нью-Йорк Пицца и Гриль</span>
             <button class="header__recall popup__close-btn text_light js-popup-close">вернуться на сайт</button>
@@ -312,6 +329,7 @@
 
     <div class="popup js-popup-error">
         <div class="popup__body">
+            <button class="popup__close js-popup-close"><span></span></button>
             <h2 class="section__title text_black text_tac text_large">У нас произошла ошибка!</h2>
             <span class="text_light text_tac">Попробуйте отправить данные еще раз.</span>
             <button class="header__recall popup__close-btn text_light js-popup-close">вернуться на сайт</button>
