--- a/ny/index.html
+++ b/ny/index.html
@@ -6,7 +6,6 @@
     <title>Сеть ресторанов Нью-Йорк</title>
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/swiper-bundle.min.js" defer></script>
     <script src="./js/main.js" defer></script>
 </head>
 <body class="body">
@@ -339,5 +338,6 @@
         </div>
     </div>
 
+    <script src="./js/swiper-bundle.min.js"></script>
 </body>
 </html>
