--- a/ny/index.html
+++ b/ny/index.html
@@ -174,7 +174,7 @@
                             <button class="text_light button button_transparent js-recall">Задать свой вопрос</button>
                         </div>
                         <div class="contacts__map">
-                            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A29cdc555604bda8f30af043534ae31d46619f9e1f1b3944212722290852e843c&amp;source=constructor" width="100%" height="610" frameborder="0"></iframe>
+                            <iframe loading="lazy" src="https://yandex.ru/map-widget/v1/?um=constructor%3A29cdc555604bda8f30af043534ae31d46619f9e1f1b3944212722290852e843c&amp;source=constructor" width="100%" height="610" frameborder="0"></iframe>
                         </div>
                     </div>
                     <div class="contacts__footer">
