--- a/ny/index.html
+++ b/ny/index.html
@@ -201,7 +201,7 @@
                 </div>
                 <div class="form__row">
                     <button class="button button_black js-submit">Заказать звонок</button>
-                    <span class="text_light form__agreement">Нажимая на кнопку, вы даете согласие на обработку персональных данных</span>
+                    <a href="#" class="text_light form__agreement js-policy">Нажимая на кнопку, вы даете согласие на обработку персональных данных</a>
                 </div>
             </form>
             <div class="popup__img">
@@ -249,7 +249,7 @@
                 </div>
                 <div class="form__row">
                     <button class="button button_black js-submit">Заказать звонок</button>
-                    <span class="text_light form__agreement">Нажимая на кнопку, вы даете согласие на обработку персональных данных</span>
+                    <a href="#" class="text_light form__agreement js-policy">Нажимая на кнопку, вы даете согласие на обработку персональных данных</a>
                 </div>
             </form>
         </div>
@@ -269,7 +269,7 @@
                 </div>
                 <div class="form__row">
                     <button class="button button_black js-submit">Записаться на дегустацию</button>
-                    <span class="text_light form__agreement">Нажимая на кнопку, вы даете согласие на обработку персональных данных</span>
+                    <a href="#" class="text_light form__agreement js-policy">Нажимая на кнопку, вы даете согласие на обработку персональных данных</a>
                 </div>
             </form>
             <div class="popup__img">
@@ -293,7 +293,7 @@
                 </div>
                 <div class="form__row">
                     <button class="button button_black js-submit">Скачать меню</button>
-                    <span class="text_light form__agreement">Нажимая на кнопку, вы даете согласие на обработку персональных данных</span>
+                    <a href="#" class="text_light form__agreement js-policy">Нажимая на кнопку, вы даете согласие на обработку персональных данных</a>
                 </div>
             </form>
             <div class="popup__img">
