--- a/hata/apartments.html
+++ b/hata/apartments.html
@@ -70,7 +70,11 @@
         </div>
     </header>
     <main class="main">
-        
+        <div class="filter">
+            <div class="filter__body">
+                
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
