--- a/hata/apartments.html
+++ b/hata/apartments.html
@@ -72,7 +72,7 @@
     <main class="main">
         <div class="filter">
             <div class="filter__body">
-                
+
             </div>
         </div>
     </main>
@@ -81,24 +81,24 @@
             <div class="footer__wrap">
                 <div class="footer__col">
                     <div class="logo">
-                        <img src="./img/logo.png" alt="Логотип" class="logo__img">
+                        <img loading="lazy" src="./img/logo.png" alt="Логотип" class="logo__img">
                     </div>
                     <div class="footer__rates">
                         <div class="footer__socials">
                             <a href="#" class="footer__social">
-                                <img src="" alt="" class="footer__social-img">
+                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
                             </a>
                             <a href="#" class="footer__social">
-                                <img src="" alt="" class="footer__social-img">
+                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
                             </a>
                             <a href="#" class="footer__social">
-                                <img src="" alt="" class="footer__social-img">
+                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
                             </a>
                             <a href="#" class="footer__social">
-                                <img src="" alt="" class="footer__social-img">
+                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
                             </a>
                         </div>
-                        <img src="./img/ratings.png" alt="Рейтинг" class="footer__rate">
+                        <img loading="lazy" src="./img/ratings.png" alt="Рейтинг" class="footer__rate">
                         <span class="footer__rates-text">Наш рейтинг: 4.9</span>
                         <span class="footer__rates-text">Всего голосов: 947</span>
                     </div>
@@ -128,14 +128,14 @@
                         <a href="#" class="footer__text">Возврат средств через Webpay</a>
                     </div>
                     <div class="footer__pay-systems">
-                        <img src="https://www.hata.by/img/pay/Visa.png" alt="Партнер">
-                        <img src="https://www.hata.by/img/pay/visa-2.png" alt="Партнер" style="height: 27px; margin: 0 20px;">
-                        <img src="https://www.hata.by/img/pay/mastercard.png" alt="Партнер">
-                        <img src="https://www.hata.by/img/pay/MasterCard.png" alt="Партнер" style="margin: 0 20px;">
-                        <img src="https://www.hata.by/img/pay/webpay.png" alt="Партнер">
-                        <img src="https://www.hata.by/img/pay/belkart.png" alt="Партнер" style="width: 50px;">
-                        <img src="https://www.hata.by/img/pay/belcard_passw.png" alt="Партнер" style="margin: 0 20px;">
-                        <img src="https://www.hata.by/img/pay/image003.png" alt="Партнер">
+                        <img loading="lazy" src="https://www.hata.by/img/pay/Visa.png" alt="Партнер">
+                        <img loading="lazy" src="https://www.hata.by/img/pay/visa-2.png" alt="Партнер" style="height: 27px; margin: 0 20px;">
+                        <img loading="lazy" src="https://www.hata.by/img/pay/mastercard.png" alt="Партнер">
+                        <img loading="lazy" src="https://www.hata.by/img/pay/MasterCard.png" alt="Партнер" style="margin: 0 20px;">
+                        <img loading="lazy" src="https://www.hata.by/img/pay/webpay.png" alt="Партнер">
+                        <img loading="lazy" src="https://www.hata.by/img/pay/belkart.png" alt="Партнер" style="width: 50px;">
+                        <img loading="lazy" src="https://www.hata.by/img/pay/belcard_passw.png" alt="Партнер" style="margin: 0 20px;">
+                        <img loading="lazy" src="https://www.hata.by/img/pay/image003.png" alt="Партнер">
                     </div>
                 </div>
             </div>
