--- a/hata/index.html
+++ b/hata/index.html
@@ -132,7 +132,7 @@
                                             </label>
                                             <label class="tab__check">
                                                 <input class="tab__hidden" name="room_amount" type="checkbox" value="4+">
-                                                <span class="button button_grey button_room">4+<span>
+                                                <span class="button button_grey button_room">4+</span>
                                             </label>
                                         </div>
                                     </div>
@@ -199,7 +199,7 @@
                                             </label>
                                             <label class="tab__check">
                                                 <input class="tab__hidden" name="room_amount" type="checkbox" value="4+">
-                                                <span class="button button_grey button_room">4+<span>
+                                                <span class="button button_grey button_room">4+</span>
                                             </label>
                                         </div>
                                     </div>
@@ -271,7 +271,7 @@
                                                 </label>
                                                 <label class="tab__check">
                                                     <input class="tab__hidden" name="room_amount" type="checkbox" value="4+">
-                                                    <span class="button button_grey button_room">4+<span>
+                                                    <span class="button button_grey button_room">4+</span>
                                                 </label>
                                             </div>
                                         </div>
@@ -350,15 +350,15 @@
                         <div class="picset__tile">
                             <picture class="picset__img">
                                 <source srcset="./img/picset_1_1.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_1_1.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_1_1.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_1_2.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_1_2.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_1_2.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_1_3.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_1_3.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_1_3.jpg" alt="Картинка в карточке">
                             </picture>
                         </div>
                         <h3 class="picset__title">Самые дешевые</h3>
@@ -368,15 +368,15 @@
                         <div class="picset__tile">
                             <picture class="picset__img">
                                 <source srcset="./img/picset_2_1.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_2_1.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_2_1.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_2_2.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_2_2.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_2_2.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_2_3.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_2_3.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_2_3.jpg" alt="Картинка в карточке">
                             </picture>
                         </div>
                         <h3 class="picset__title">До 50 тысяч</h3>
@@ -386,15 +386,15 @@
                         <div class="picset__tile">
                             <picture class="picset__img">
                                 <source srcset="./img/picset_3_1.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_3_1.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_3_1.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_3_2.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_3_2.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_3_2.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_3_3.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_3_3.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_3_3.jpg" alt="Картинка в карточке">
                             </picture>
                         </div>
                         <h3 class="picset__title">В благополучных районах</h3>
@@ -724,15 +724,15 @@
                         <div class="picset__tile">
                             <picture class="picset__img">
                                 <source srcset="./img/picset_4_1.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_4_1.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_4_1.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_4_2.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_4_2.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_4_2.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_4_3.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_4_3.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_4_3.jpg" alt="Картинка в карточке">
                             </picture>
                         </div>
                         <h3 class="picset__title">Обзоры бизнес-центров</h3>
@@ -743,15 +743,15 @@
                         <div class="picset__tile">
                             <picture class="picset__img">
                                 <source srcset="./img/picset_5_1.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_5_1.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_5_1.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_5_2.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_5_2.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_5_2.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_5_3.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_5_3.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_5_3.jpg" alt="Картинка в карточке">
                             </picture>
                         </div>
                         <h3 class="picset__title">Обзоры жилых комплексов</h3>
@@ -762,15 +762,15 @@
                         <div class="picset__tile">
                             <picture class="picset__img">
                                 <source srcset="./img/picset_6_1.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_6_1.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_6_1.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_6_2.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_6_2.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_6_2.jpg" alt="Картинка в карточке">
                             </picture>
                             <picture class="picset__img">
                                 <source srcset="./img/picset_6_3.webp" type="image/webp">
-                                <img loading="lazy" src="./img/picset_6_3.jpg" alt="Картинка в карточке" loading="lazy">
+                                <img loading="lazy" src="./img/picset_6_3.jpg" alt="Картинка в карточке">
                             </picture>
                         </div>
                         <h3 class="picset__title">Описание районов</h3>
